test/invalid/similar.art
let some_fancy_name = 1;
let use_of_fancy_name = som_fanc_name;
